--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!--DO WE UPDATE THESE?-->
     <title>[Your Style Title] by [Your Name] | Style Stage</title>
     <meta name="description" content="[Your optional description]" />
-    <link href="style.css" rel="stylesheet" />
+    <!--DO WE UPDATE THESE?-->
+    
+    <!--PUT THE OTHER LINK BACK-->
+    <link href="../sass/style.css" rel="stylesheet" />
+    <!--PUT THE OTHER LINK BACK-->
+
   </head>
   <body>
     <a href="#main" class="skip-link">Skip to main content</a>
