--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!--DO WE UPDATE THESE?-->
-    <title>[Your Style Title] by [Your Name] | Style Stage</title>
-    <meta name="description" content="[Your optional description]" />
-    <!--DO WE UPDATE THESE?-->
+    <title>Japanese Ink by Elizabeth, Yvette, Sam | Style Stage</title>
+    <meta name="description" content="WDD331R Zen Garden Team Assignment" />
     
     <!--PUT THE OTHER LINK BACK-->
     <link href="../sass/style.css" rel="stylesheet" />
