html changed back

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Japanese Ink by Elizabeth, Yvette, Sam | Style Stage</title>
     <meta name="description" content="WDD331R Zen Garden Team Assignment" />
-    
-    <!--PUT THE OTHER LINK BACK-->
-    <link href="../sass/style.css" rel="stylesheet" />
-    <!--PUT THE OTHER LINK BACK-->
+    <link href="style.css" rel="stylesheet" />
+
 
   </head>
   <body>
